# rust-admin-api

./: .env  Cargo.toml  README.md
migrations/2020-02-15-072503_users/: up.sql
src/: cli_args.rs  errors.rs  main.rs  models.rs  schema.rs
src/app/user/: model.rs
src/app/user/service/: list.rs  login.rs
src/database/: mod.rs
src/graphql/: handler.rs  index.rs  mod.rs
src/graphql/schemas/: root.rs  user.rs
src/jwt/: handler.rs  manager.rs  model.rs
src/modules/user/: mod.rs  model.rs  util.rs
src/modules/user/service/: create_user.rs  list.rs  login.rs  mod.rs
src/route/: mod.rs
src/tests/: mod.rs  test_login.rs
src/user/: mod.rs  model.rs
src/user/service/: list.rs  mod.rs
tests/: login_test.rs
tests/common/: mod.rs
