[package]
name = "rust-admin"
version = "0.1.0"
authors = ["john.zhao <john.zhao@newType.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
juniper = "0.14"
structopt = "0.3"
diesel = { version = "1.4", features = ["postgres", "uuidv07", "chrono", "r2d2"] }
regex = "1"
lazy_static = "1"
thiserror = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
dotenv = "0.15"
serde_json = "1.0"
num = "0.2"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }



