[package]
name = "rust-admin"
version = "0.1.0"
authors = ["john.zhao <john.zhao@newType.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
juniper = "0.14"
structopt = "0.3"
diesel = { version = "1.4", features = ["postgres", "uuidv07", "chrono", "r2d2"] }
regex = "1"
lazy_static = "1"
thiserror = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
dotenv = "0.15"
serde_json = "1.0"
num = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
jsonwebtoken = "7.0.0-alpha.2"
anyhow = "1.0"
shrinkwraprs = "0.2"
md5 = "0.7.0"




